# blog

./: .ghci  .gitignore  404.html  404.markdown  CNAME  LICENCE  README.markdown  README.md  atom.xml  blog.cabal  contact.html  index.html  keybase.txt  location.html  preview.sh  site.hs  sync.sh  thegapchessclub-org-au.cabal
404/: index.html
contact/: index.html
css/: custom.css  screen.css
etc/: posts-todo.txt
people/: arobinson.md  award.md  tmorris.md
posts/: 20-intermediate-scala-exercises.markdown  2006-11-09-aplas-06.markdown  2006-11-16-revisiting-maybe-in-java.markdown  2006-11-22-australians-in-sport.markdown  2006-12-18-maybe-monad-in-java.markdown  2006-12-19-fix-it-sun.markdown  2006-12-30-the-dawkins-delusion.markdown  2007-01-01-strong-type-systems.markdown  2007-02-09-ignorance-is-mostly-bliss-but-not-always.markdown  2007-05-16-you-lazy-thunk.markdown  2007-05-23-the-power-of-type-classes-with-scala-implicit-defs.markdown  2007-07-21-inheritance-dunrite.markdown  2007-08-04-algebraic-data-types-again.markdown  2007-08-04-saturday-night-laugh.markdown  2007-08-12-sam-harris-at-2007-aspen-ideas-festival.markdown  2007-09-17-yeah-but-speed-kills.markdown  2007-10-13-god-in-the-brain.markdown  2007-12-05-does-java-cause-self-delusion.markdown  2007-12-06-no-no-i-said-critical-examination.markdown  2007-12-18-scalaz.markdown  2007-12-29-scala-262-getting-support-for-java-generics.markdown  2008-01-15-scalalistfoldleft-for-java-programmers.markdown  2008-01-16-scalaoption-cheat-sheet.markdown  2008-02-07-great-quote-slava.markdown  2008-02-25-thats-what-monads-are-for.markdown  2008-02-27-christopher-hitchens-the-moral-necessity-of-atheism.markdown  2008-02-29-scalaz-24-released.markdown  2008-03-16-religiosity-is-a-neurological-disorder.markdown  2008-03-24-pseudo-science.markdown  2008-04-06-automated-unit-testing-your-java-using-scalacheck.markdown  2008-04-24-qotd-i-found-it-amusing-anyway.markdown  2008-05-08-how-to-share.markdown  2008-05-27-reductio-testing-equalshashcode.markdown  2008-05-31-jaoo-brisbane-2008.markdown  2008-06-03-what-you-call-integration-testing-i-call-sloppy-programming.markdown  2008-06-06-a-case-for-automated-testing.markdown  2008-06-20-applicative-functors-in-scala.markdown  2008-06-25-functor-laws-using-reductio-scala.markdown  2008-06-26-monad-laws-using-reductio-scala.markdown  2008-06-28-just-what-the-funk-is-a-functor-anyway.markdown  (+228 more)
posts/20-intermediate-haskell-exercises/: index.html
posts/20-intermediate-scala-exercises/: index.html
posts/22-of-99/: index.html
posts/a-brief-point-on-static-typing/: index.html
posts/a-case-for-automated-testing/: index.html
posts/a-fine-example/: index.html
posts/a-fine-motto/: index.html
posts/a-fling-with-lazy-evaluation/: index.html
posts/a-poke-at-the-essence-of-functional-programming/: index.html
posts/abc-learning-centres-required-for-adults/: index.html
posts/abort-httpfoobar-does-not-appear-to-be-an-hg-repository/: index.html
posts/actor-concurrency-for-java/: index.html
posts/agile-is-falling-like-religions-do/: index.html
posts/algebraic-data-types-again/: index.html
posts/amuse-yourself/: index.html
posts/another-call-to-genocide/: index.html
posts/anti-intellectual-euphemisms/: index.html
posts/aplas-06/: index.html
posts/applicative-do/: index.html
posts/applicative-functor-laws-using-reductio-scala/: index.html
posts/applicative-functors-in-scala/: index.html
posts/assessing-and-being-held-responsible-for-the-cost-of-bad-decisions/: index.html
posts/australians-in-sport/: index.html
posts/automated-unit-testing-your-java-using-scalacheck/: index.html
posts/automated-validation-with-applicatives-and-semigroups-for-sanjiv/: index.html
posts/automated-validation-with-applicatives-and-semigroups-part-2-java/: index.html
posts/beginner-java-exercise-with-data-types/: index.html
posts/brads-original-post/: index.html
posts/brisbane-ride-spots/: index.html
posts/brisbane-thulimbah-return-ride-report/: index.html
posts/bye-reddit/: index.html
posts/can-an-entrapment-neuropathy-of-the-superficial-peroneal-nerve-cause-foot-drop/: index.html
posts/cat-3d-enhanced-lumbosacral-2011-11-02-24-hours-post-op/: index.html
posts/christopher-hitchens-the-moral-necessity-of-atheism/: index.html
posts/circumvent-the-filter/: index.html
posts/clean-up-resource-with-scala/: index.html
posts/configuration-versus-code/: index.html
posts/configuration-without-the-bugs-and-gymnastics/: index.html
posts/continuation-monad-in-scala/: index.html
posts/controlling-effects-with-flatmap/: index.html
posts/critique-of-oderskys-scala-levels/: index.html
posts/data-parallelism-in-haskell/: index.html
posts/dear-agileleanscrumxp-person/: index.html
posts/dear-java-guy-state-is-a-monad/: index.html
posts/dear-java-library-guy/: index.html
posts/dear-pm-john-howard/: index.html
posts/debut-with-a-catamorphism/: index.html
posts/defmacro1-defmacro0-1/: index.html
posts/did-you-to-have-be-so-blunt/: index.html
posts/discipline-in-thought/: index.html
posts/do-air-conditioning-geeks-exist/: index.html
posts/does-java-cause-self-delusion/: index.html
posts/does-scala-have-javas-ternary-operator/: index.html
src/: People.hs  Posts.hs  Site.hs
tags/: Applicative.xml  Apply.xml  Bayes' Theorem.xml  Bind.xml  C#.xml  Code Comprehension.xml  Comonad.xml  Conondale.xml  DNS.xml  Fibonacci.xml  Function.xml  Functional Programming.xml  Functor.xml  General.xml  Haskell.xml  Health.xml  Husqvarna.xml  Identifiers.xml  Imbil.xml  Internet Filter.xml  Java.xml  KTM.xml  Law.xml  Mapping.xml  Memoisation.xml  Monad.xml  Motorcycle.xml  Motorcycling.xml  Mubbip woo.xml  Parametricity.xml  Philosophy.xml  Programming.xml  Project Euler.xml  Ride Report.xml  Road Rules.xml  Scala.xml  Sport.xml  State.xml  Supermoto.xml  Teaching.xml  (+8 more)
templates/: atom-post.xml  atom.xml  default.html  disqus.html  people-page-snippet.html  person.html  post.html  posts.html  tag.html
toplevel/: 404.markdown  index.markdown  posts.markdown
(+222 files in other folders)
