name:                blog
version:             0.1.2.0
synopsis:            Tony's Blog
description:         Tony's Blog
homepage:            http://blog.tmorris.net/
license:             AllRightsReserved
copyright:           Copyright (C) 2014 Tony Morris
author:              Tony Morris
maintainer:          Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
category:            Web
build-type:          Simple
cabal-version:       >=1.16

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/blog.git

executable blog
  default-language: Haskell2010
  main-is:          site.hs
  build-depends:      base       >= 4.6  && < 4.9
                    , binary     >= 0.5  && < 0.8
                    , directory  >= 1.2  && < 1.3
                    , filepath   >= 1.3  && < 1.5
                    , hakyll     >= 4.7  && < 4.8
                    , pandoc     >= 1.14 && < 1.15
                    , process    >= 1.1  && < 1.3
                    , containers >= 0.5  && < 0.6
                    , lens       >= 4.12 && < 4.13

  ghc-options:
                    -Wall

  default-extensions:
                    OverloadedStrings
                    NoImplicitPrelude
