name:                 blog
version:              0.1.2.1
synopsis:             Tony's Blog
description:          Tony's Blog
homepage:             http://blog.tmorris.net/
license:              AllRightsReserved
copyright:            Copyright (C) 2014-2016 Tony Morris
author:               Tony Morris
maintainer:           Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
category:             Web
build-type:           Simple
cabal-version:        >=1.16

source-repository     head
  type:               git
  location:           git@github.com:tonymorris/blog.git

executable blog
  default-language:   Haskell2010

  main-is:            site.hs

  build-depends:        base >= 4.9 && < 5
                      , HTTP == 4000.3.3
                      , JuicyPixels == 3.2.8
                      , SHA == 1.6.4.2
                      , StateVar == 1.1.0.4
                      , adjunctions == 4.3
                      , aeson == 0.11.2.1
                      , aeson-pretty == 0.8.1
                      , asn1-encoding == 0.9.4
                      , asn1-parse == 0.9.4
                      , asn1-types == 0.3.2
                      , async == 2.1.0
                      , attoparsec == 0.13.0.2
                      , base-compat == 0.9.1
                      , base-orphans == 0.5.4
                      , base64-bytestring == 1.0.0.1
                      , bifunctors == 5.4.1
                      , binary == 0.8.3.0
                      , blaze-builder == 0.4.0.2
                      , blaze-html == 0.8.1.2
                      , blaze-markup == 0.7.1.0
                      , byteable == 0.1.1
                      , case-insensitive == 1.2.0.7
                      , cereal == 0.5.3.0
                      , cmark == 0.5.3.1
                      , cmdargs == 0.10.14
                      , comonad == 5
                      , conduit == 1.2.7
                      , conduit-extra == 1.1.13.2
                      , connection == 0.2.6
                      , containers == 0.5.7.1
                      , contravariant == 1.4
                      , cookie == 0.4.2.1
                      , cryptohash == 0.11.9
                      , cryptonite == 0.19
                      , digest == 0.0.1.2
                      , directory == 1.2.6.2
                      , distributive == 0.5.0.2
                      , enclosed-exceptions == 1.0.2
                      , exceptions == 0.8.3
                      , fail == 4.9.0.0
                      , filemanip == 0.3.6.3
                      , filepath == 1.4.1.0
                      , free == 4.12.4
                      , fsnotify == 0.2.1
                      , haddock-library == 1.4.2
                      , hakyll == 4.8.3.2
                      , hashable == 1.2.4.0
                      , highlighting-kate == 0.6.2.1
                      , hinotify == 0.3.8.1
                      , hourglass == 0.2.10
                      , hs-bibutils == 5.5
                      , hslua == 0.4.1
                      , http-client == 0.5.3.1
                      , http-client-tls == 0.3.0
                      , http-types == 0.9.1
                      , kan-extensions == 5.0.1
                      , lens == 4.14
                      , lifted-base == 0.2.3.8
                      , lrucache == 1.2.0.0
                      , memory == 0.13
                      , mime-types == 0.1.0.7
                      , mmorph == 1.0.6
                      , monad-control == 1.0.1.0
                      , network == 2.6.3.1
                      , network-uri == 2.6.1.0
                      , pandoc == 1.17.2
                      , pandoc-citeproc == 0.10.1
                      , pandoc-types == 1.16.1.1
                      , parallel == 3.2.1.0
                      , parsec == 3.1.11
                      , pem == 0.2.2
                      , prelude-extras == 0.4.0.3
                      , primitive == 0.6.1.0
                      , process == 1.4.2.0
                      , profunctors == 5.2
                      , reflection == 2.1.2
                      , regex-base == 0.93.2
                      , regex-pcre-builtin == 0.94.4.8.8.35
                      , regex-tdfa == 1.2.2
                      , resourcet == 1.1.7.5
                      , rfc5051 == 0.1.0.3
                      , scientific == 0.3.4.9
                      , semigroupoids == 5.1
                      , semigroups == 0.18.2
                      , setenv == 0.1.1.3
                      , socks == 0.5.5
                      , split == 0.2.3.1
                      , stm == 2.4.4.1
                      , streaming-commons == 0.1.15.5
                      , syb == 0.6
                      , system-filepath == 0.4.13.4
                      , tagged == 0.8.5
                      , tagsoup == 0.14
                      , temporary == 1.2.0.4
                      , texmath == 0.8.6.5
                      , text == 1.2.2.1
                      , time-locale-compat == 0.1.1.3
                      , tls == 1.3.8
                      , transformers-base == 0.4.4
                      , transformers-compat == 0.5.1.4
                      , unix-compat == 0.4.2.0
                      , unordered-containers == 0.2.7.1
                      , vector == 0.11.0.0
                      , void == 0.7.1
                      , x509 == 1.6.3
                      , x509-store == 1.6.1
                      , x509-system == 1.6.3
                      , x509-validation == 1.6.3
                      , xml == 1.3.14
                      , xml-conduit == 1.3.5
                      , xml-types == 0.3.6
                      , yaml == 0.8.18.5
                      , zip-archive == 0.3.0.4
                      , zlib == 0.6.1.1

  ghc-options:        -Wall

  default-extensions: OverloadedStrings
                      NoImplicitPrelude
